# gpt-web-driver

./: .gitattributes  .gitignore  CONTRIBUTING.md  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt  sample-body.html  spec.md  spec2.md
.github/workflows/: ci.yml
docs/: interface.md
research/: 1.md  2.md  main.md
research/future/: 3.md  4.md  5.md  6.md
scripts/: extract_chat_messages.py  serve_test_app.py
scripts/windows/: bootstrap.ps1
src/gpt_web_driver/: __init__.py  api_server.py  browser.py  calibration.py  cli.py  demo_server.py  flow.py  geometry.py  nibs.py  nodriver_dom.py  os_input.py  profile.py  runner.py  stealth.py
src/gpt_web_driver/actions/: __init__.py  input.py
src/gpt_web_driver/core/: __init__.py  driver.py  env.py  observer.py  physics.py  safety.py
src/spec2_hybrid/: __init__.py  browser.py  cli.py  geometry.py  nodriver_dom.py  os_input.py  runner.py  stealth.py
tests/: conftest.py  test_api_server.py  test_browser.py  test_calibration.py  test_chat_webapp_e2e.py  test_cli.py  test_flow.py  test_geometry.py  test_nibs.py  test_nodriver_dom.py  test_os_input.py  test_physics.py  test_profile.py  test_read_only_doctrine.py  test_runner_cdp.py  test_stealth.py
webapp/: app.js  calibrate.html  index.html  style.css
