[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-web-driver"
version = "0.1.0"
description = "Hybrid browser automation: nodriver for passive DOM reads + PyAutoGUI for OS-level input."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "nodriver",
]

[project.optional-dependencies]
gui = [
  "pyautogui",
]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[project.scripts]
gpt-web-driver = "gpt_web_driver.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
