[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-web-driver"
version = "0.1.0"
description = "Hybrid browser automation: nodriver for passive DOM reads + PyAutoGUI for OS-level input."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "nodriver",
  "platformdirs",
]

[project.optional-dependencies]
gui = [
  "pyautogui",
  "pyperclip",
]
api = [
  "fastapi",
  "uvicorn",
]
nibs = [
  "beautifulsoup4",
  "numpy",
]
desktop = [
  "pyvda; sys_platform == 'win32'",
]
dev = [
  "pytest",
  "ruff",
  "mypy",
]
all = [
  "gpt-web-driver[gui,api,nibs,desktop,dev]",
]
e2e = [
  "pytest",
  "playwright",
  "fastapi",
  "uvicorn",
  "httpx",
]

[project.scripts]
gpt-web-driver = "gpt_web_driver.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -m 'not e2e'"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end browser tests requiring Playwright + Chromium",
]
